# AI_Game_Cazacu_Lassagne

./: .gitignore  Arbitre.java  CMakeLists.txt  Move.hpp  README.md  Rules2025.txt  main.cpp  make.bat  versions.txt
IA FINALE/: Arbitre.java  ArbitreTemporaire.java  GameState.hpp  Rapport.docx  Search.hpp  main.cpp  player_debug.txt
src/: GameRules.hpp  Search.hpp  main.cpp  main_bot.cpp
src/ais/v1/: Search.hpp
src/ais/v2/: Search.hpp
src/ais/v3/: Search.hpp
src/ais/v4/: Search.hpp
src/ais/v5/: Search.hpp
src/ais/v6/: Search.hpp
src/ais/v7/: Search.hpp
src/ais/v8/: Search.hpp
src/common/: Debugger.hpp  GameRules.hpp  GameState.hpp  Move.hpp  SearchStats.hpp
